Harden generated VM arguments for leak tests
Generate module opens from all modules in the current JDK via ModuleFinder,
write them as a Java argument file, and generate the file at test execution
time for the legacy test.xml path so I-builds use the actual test JDK.

Add a leak-suite regression check for effective module openness, remove stale
hard-coded package exceptions, and keep the existing Maven leak-suite include
state unchanged.

Follow-up for https://github.com/eclipse-jdt/eclipse.jdt.ui/pull/3167